# ondotori-client

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml
ondotori_client/: ondotori_data.py
ondotori_client/usecase/: current_device_data.py
requirements/: dev.txt  main.txt
